--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  font-size: 15px;
+  text-align: center;
 }
 
 img {
@@ -10,6 +12,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  }
+
+.info {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
